# WalletBot

./: .dockerignore  .env.test  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  INTEGRATION_TESTS.md  PROJECT_SUMMARY.md  README-DOCKER.md  README.md  config.example  docker-compose.yml
.github/workflows/: ci.yml  docker-build.yml
src/: error.rs  lib.rs  main.rs  retry.rs  utils.rs
src/bot/: commands.rs  dispatcher.rs  handler.rs  mod.rs  traits.rs
src/calculator/: balance.rs  mod.rs
src/config/: settings.rs
src/database/: mod.rs  models.rs  operations.rs
src/parser/: message.rs  mod.rs  regex.rs
tests/: cucumber_tests.rs  integration_tests.rs
tests/features/: bot_api.feature  database_operations.feature  error_handling.feature  message_flow.feature  message_parsing.feature
