[package]
name = "WalletBot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Telegram Bot API
teloxide = { version = "0.12", features = ["macros", "webhooks"] }
dptree = "0.3"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Database
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Regular expressions
regex = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Environment variables
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"


[dev-dependencies]
# Testing
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.10"
serial_test = "3.0"
wiremock = "0.6"
httpmock = "0.7"
rand = "0.8"
cucumber = "0.21"

# 为了能够在tests中使用项目的内部模块
[lib]
name = "walletbot"
path = "src/lib.rs"

[[bin]]
name = "walletbot"
path = "src/main.rs"

[features]
default = []
testing = []

[[test]]
name = "cucumber_tests"
harness = false
